Fixed long word overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -133,6 +133,8 @@ hr {
 #bodyR {
     font-weight: 400;
     font-size: 20px;
+    width: calc(100%-40px);
+    word-wrap: break-word;
 }
 #letters p {
     font-weight: 600;
